--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -63,7 +63,7 @@
 
 @media (max-width: 1024px ){
     
-    #hi-home,#profil-home,#f-end-cont-home,#projects-home,#skills-home{
+    #hi-home,#profil-home,#f-end-cont-home,#projects-home,#skills-home,#projects-cont-home{
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
