--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -59,6 +59,10 @@
     max-width: 300px;
     max-height: 200px ;
 }
+textarea{
+    width: 150px;
+    height: 150px;
+}
 
 
 @media (max-width: 1024px ){
